Fixed IntegrationStepClass