@@ -1,14 +1,13 @@
 package it.pagopa.selfcare.document.integrationTest;
 
 import io.quarkus.test.junit.QuarkusTestProfile;
-import lombok.NoArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.StringUtils;
-
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.util.Map;
+import lombok.NoArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 
 @Slf4j
 @NoArgsConstructor
@@ -23,7 +22,7 @@ public class IntegrationProfile implements QuarkusTestProfile {
     File file = new File("src/test/resources/certs/pk-key.pub");
     String key = StringUtils.EMPTY;
     try {
-      key = new String(Files.readAllBytes(file.toPath()));
+      key = Files.readString(file.toPath());
     } catch (IOException e) {
       log.error("Exception reading file", e);
     }
